# Induction_assignment_2

gazebo_python/: package.xml  setup.cfg  setup.py
gazebo_python/configs/: custom.rviz
gazebo_python/launch/: assn_2.launch.py  custom_rviz.launch.py
gazebo_python/models/: assn_2.sdf
